[metadata]
name = Flask-BootstrapForms
version = 0.6.2
description = Generator for Bootstrap form elements with methods to update fields in routes or jinja.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = David Carmichael
keywords = bootstrap flask form generator
url = https://github.com/CheeseCake87/Flask-BootstrapForms
license = GNU General Public License v2 or later (GPLv2+)
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    =src
packages = flask_bootstrapforms
install_requires =
    MarkupSafe
python_requires = >=3.8

zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
flask_bootstrapforms = py.typed

[flake8]
max-line-length = 160
